# transcript-summarization-translation

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  instance-role-trust.json  secrets-policy.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py
backend/tests/: test_api.py
frontend/: .env.production  Dockerfile  package-lock.json
frontend/nginx/: default.conf
frontend/src/: App.css  App.tsx
frontend/src/services/: api.ts
test_assets/: doctor_conversation_1.txt  doctor_conversation_2.txt
