[project]
name = "transcript-summarization-translation-backend"
version = "0.1.0"
description = "Transcript Summarization and Translation Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
]
